# ACT

./: README.md  constants.py  main.py  pyproject.toml
src/: __init__.py  config.ini  main.py
src/api/: __init__.py  amiibo.py
src/domain/: __init__.py
src/domain/models/: __init__.py  amiibo.py
src/services/: process.py  shell_printer.py
src/tests/: mock_data.py  test_amiibo_api.py  test_commands.py  test_shell_printer.py
src/tests/data/: game_series.json  mewtwo.json  zelda_series.json
src/view/: __init__.py
src/view/UI/: gui.py
src/view/shell/: __init__.py  cli.py  commands.py  core.py  docs.py
tests/: test_amiibo_api.py  test_commands.py
